[package]
name = "mc-server-wrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
directories = "4.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"