[package]
name = "mc-server-wrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
axum = "0.4.4"
chrono = "0.4.19"
directories = "4.0.1"
flate2 = "1.0.22"
log = "0.4"
pretty_env_logger = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
tar = "0.4.38"
tokio = { version = "1", features = ["full"] }